--- a/src/i18n/en/validation.json
+++ b/src/i18n/en/validation.json
@@ -13,5 +13,14 @@
     "EMAIL_EXISTS": "Email already exists",
     "USER_SUCCESS": "User registered successfully",
     "USER_FAIL": "User registration failed"
+  },
+  "AUTH_LOGIN": {
+    "USER_NAME":"Username must be provided",
+    "PASSWORD_REQUIRED": "Password is required",
+    "PASSWORD_MIN": "Password must be at least 6 characters",
+    "USER_NOT_FOUND": "User not found",
+    "PASSWORD_INCORRECT": "Password is incorrect",
+    "LOGIN_SUCCESS": "Login successful",
+    "LOGIN_FAIL": "Login failed"
   }
 }
