--- a/src/i18n/fr/response.json
+++ b/src/i18n/fr/response.json
@@ -5,6 +5,25 @@
     "INVALID_CREDENTIALS": "Invalid credentials",
     "EMAIL_ALREADY_EXISTS": "Email already exists",
     "PHONE_ALREADY_EXISTS": "Phone number already exists",
-    "USER_NOT_FOUND": "User not found"
+    "USER_NOT_FOUND": "User not found",
+    "LOGIN_SUCCESS": "Login successful",
+
+    "OTP_REQUIRED": "OTP is required",
+    "OTP_INVALID": "OTP is invalid",
+    "OTP_EXPIRED": "OTP is expired",
+    "OTP_SUCCESS": "OTP verified successfully",
+
+    "PASSWORD_RESET_SUCCESS": "Password reset successful",
+    "PASSWORD_RESET_FAIL": "Password reset failed",
+    "PASSWORD_MISMATCH": "Passwords do not match"
+  },
+  "CATEGORY":{
+    "CATEGORY_EXIST":"This Category is Currently registered",
+    "CATEGORY_CREATED_SUCCESSFULLY":"Category Created Successflly",
+     "CATEGORY_FETCH_SUCCESSFULLY": "Category Fetch Successflly",
+     "CATEGORY_NOT_FOUND": "This category is not found",
+     "CATEGORY_UPDATED_SUCCESSFULLY":"Category updated successfully",
+     "CATEGORY_DELETED_SUCCESSFULLY":"Category deleted successfully",
+     "CATEGORY_STATUS_UPDATED_SUCCESSFULLY":"Category status updated successfully"
   }
 }
