--- a/src/i18n/kin/response.json
+++ b/src/i18n/kin/response.json
@@ -5,6 +5,25 @@
     "INVALID_CREDENTIALS": "Ijambo ry'umukoresha cyangwa ijambo ry'umukorari ntibikunze, ongera ugerageze.",
     "EMAIL_ALREADY_EXISTS": "Iyi imë yavuye mu matora, ongera ugerageze.",
     "PHONE_ALREADY_EXISTS": "Iyi telefoni yavuye mu matora, ongera ugerageze.",
-    "USER_NOT_FOUND": "Umukoresha ntavutse, ongera ugerageze."
+    "USER_NOT_FOUND": "Umukoresha ntavutse, ongera ugerageze.",
+    "LOGIN_SUCCESS": "Login successful",
+
+    "OTP_REQUIRED": "OTP is required",
+    "OTP_INVALID": "OTP is invalid",
+    "OTP_EXPIRED": "OTP is expired",
+    "OTP_SUCCESS": "OTP verified successfully",
+
+    "PASSWORD_RESET_SUCCESS": "Password reset successful",
+    "PASSWORD_RESET_FAIL": "Password reset failed",
+    "PASSWORD_MISMATCH": "Passwords do not match"
+  },
+  "CATEGORY": {
+    "CATEGORY_EXIST": "This Category is Currently registered",
+    "CATEGORY_CREATED_SUCCESSFULLY": "Category Created Successflly",
+    "CATEGORY_FETCH_SUCCESSFULLY": "Category Fetch Successflly",
+    "CATEGORY_NOT_FOUND": "Iyi kategori ntavutse, ongera ugerageze.",
+    "CATEGORY_UPDATED_SUCCESSFULLY": "Iyi kategori yavuguriwe neza, ongera ugerageze.",
+    "CATEGORY_DELETED_SUCCESSFULLY": "Iyi kategori yasibitse neza, ongera ugerageze.",
+    "CATEGORY_STATUS_UPDATED_SUCCESSFULLY": "Iyi kategori yavuguriwe neza, ongera ugerageze."
   }
 }
