--- a/src/i18n/kin/validation.json
+++ b/src/i18n/kin/validation.json
@@ -13,5 +13,25 @@
     "USERNAME_EXISTS": "Iyi izina rishobora kuba ririmo",
     "USER_SUCCESS": "Umuntu yashoboye kwinjira muri sistem byagenze neza",
     "USER_FAIL": "Ntibyagenze neza, ongera ugerageze"
+  },
+  "AUTH_LOGIN": {
+    "USER_NAME":"Username must be provided",
+    "PASSWORD_REQUIRED": "Password is required",
+    "PASSWORD_MIN": "Password must be at least 6 characters",
+    "USER_NOT_FOUND": "User not found",
+    "PASSWORD_INCORRECT": "Password is incorrect",
+    "LOGIN_SUCCESS": "Login successful",
+    "LOGIN_FAIL": "Login failed",
+    
+    "OTP_REQUIRED": "OTP is required",
+    "OTP_INVALID": "OTP is invalid",
+    "OTP_EXPIRED": "OTP is expired",
+    "OTP_SUCCESS": "OTP verified successfully"
+  }
+  ,
+  "CATEGORY_REGISTER": {
+    "NAME_REQUIRED": "Name is required",
+    "DESCRIPTION_REQUIRED": "Description is required",
+    "ICON_URL_REQUIRED": "Icon URL is required"
   }
 }
