--- a/src/i18n/fr/validation.json
+++ b/src/i18n/fr/validation.json
@@ -15,23 +15,28 @@
     "USER_FAIL": "Erreur lors de l'enregistrement de l'utilisateur"
   },
   "AUTH_LOGIN": {
-    "USER_NAME":"Username must be provided",
+    "USER_NAME": "Username must be provided",
     "PASSWORD_REQUIRED": "Password is required",
     "PASSWORD_MIN": "Password must be at least 6 characters",
     "USER_NOT_FOUND": "User not found",
     "PASSWORD_INCORRECT": "Password is incorrect",
     "LOGIN_SUCCESS": "Login successful",
     "LOGIN_FAIL": "Login failed",
-    
+
     "OTP_REQUIRED": "OTP is required",
     "OTP_INVALID": "OTP is invalid",
     "OTP_EXPIRED": "OTP is expired",
     "OTP_SUCCESS": "OTP verified successfully"
-  }
-  ,
+  },
   "CATEGORY_REGISTER": {
     "NAME_REQUIRED": "Name is required",
     "DESCRIPTION_REQUIRED": "Description is required",
     "ICON_URL_REQUIRED": "Icon URL is required"
+  },
+  "USER_CATEGORY_REGISTER": {
+    "USER_ID_REQUIRED": "User ID is required",
+    "CATEGORY_ID_REQUIRED": "Category ID is required",
+     "CATEGORY_ID_MUST_BE_STRING": "Category ID must be a string",
+     "CATEGORY_NOT_FOUND": "Category not found"
   }
 }
