--- a/src/i18n/fr/validation.json
+++ b/src/i18n/fr/validation.json
@@ -36,7 +36,30 @@
   "USER_CATEGORY_REGISTER": {
     "USER_ID_REQUIRED": "User ID is required",
     "CATEGORY_ID_REQUIRED": "Category ID is required",
-     "CATEGORY_ID_MUST_BE_STRING": "Category ID must be a string",
-     "CATEGORY_NOT_FOUND": "Category not found"
+    "CATEGORY_ID_MUST_BE_STRING": "Category ID must be a string",
+    "CATEGORY_NOT_FOUND": "Category not found"
+  },
+  "COURSES": {
+    "COURSE_NAME_REQUIRED": "Le nom du cours est requis",
+    "COURSE_DESCRIPTION_REQUIRED": "La description du cours est requise",
+    "COURSE_CATEGORY_REQUIRED": "La catégorie du cours est requise",
+    "COURSE_CATEGORY_NOT_FOUND": "Catégorie de cours non trouvée",
+    "COURSE_CREATED_SUCCESS": "Cours créé avec succès",
+    "COURSE_CREATED_FAIL": "Échec de la création du cours",
+    "COURSE_UPDATED_SUCCESS": "Cours mis à jour avec succès",
+    "COURSE_UPDATED_FAIL": "Échec de la mise à jour du cours",
+    "COURSE_DELETED_SUCCESS": "Cours supprimé avec succès",
+    "COURSE_DELETED_FAIL": "Échec de la suppression du cours",
+    "COURSE_NOT_FOUND": "Cours non trouvé",
+    "COURSE_ID_REQUIRED": "L'ID du cours est requis",
+    "COURSE_ID_MUST_BE_STRING": "L'ID du cours doit être une chaîne",
+    "COURSE_THUMBNAIL_REQUIRED": "La miniature du cours est requise",
+    "COURSE_PRICE_REQUIRED": "Le prix du cours est requis",
+    "COURSE_PRICE_INVALID": "Le prix du cours est invalide",
+    "COURSE_PRICE_MUST_BE_NUMBER": "Le prix du cours doit être un nombre",
+    "COURSE_PRICE_MUST_BE_POSITIVE": "Le prix du cours doit être un nombre positif",
+    "COURSE_CURRENT_PRICE_REQUIRED": "Le prix actuel du cours est requis",
+    "COURSE_CURRENT_PRICE_INVALID": "Le prix actuel du cours est invalide",
+    "COURSE_IS_FREE_REQUIRED": "Le cours est gratuit est requis"
   }
 }
