--- a/src/i18n/kin/validation.json
+++ b/src/i18n/kin/validation.json
@@ -38,5 +38,27 @@
     "CATEGORY_ID_REQUIRED": "Category ID is required",
     "CATEGORY_ID_MUST_BE_STRING": "Category ID must be a string",
     "CATEGORY_NOT_FOUND": "Category not found"
+  },
+  "COURSES": {
+    "COURSE_NAME_REQUIRED": "Izina ry'amasomo rirakenewe",
+    "COURSE_DESCRIPTION_REQUIRED": "Ibisobanuro by'amasomo birakenewe",
+    "COURSE_CATEGORY_REQUIRED": "Icyiciro cy'amasomo kirakenewe",
+    "COURSE_CATEGORY_NOT_FOUND": "Icyiciro cy'amasomo nticyabonetse",
+    "COURSE_CREATED_SUCCESS": "Amasomo yashyizweho neza",
+    "COURSE_CREATED_FAIL": "Gushyiraho amasomo byanze",
+    "COURSE_UPDATED_SUCCESS": "Amasomo avuguruwe neza",
+    "COURSE_UPDATED_FAIL": "Guhindura amasomo byanze",
+    "COURSE_DELETED_SUCCESS": "Amasomo yakuweho neza",
+    "COURSE_DELETED_FAIL": "Gukuraho amasomo byanze",
+    "COURSE_NOT_FOUND": "Amasomo ntayo wabonye",
+    "COURSE_ID_REQUIRED": "ID y'amasomo irakenewe",
+    "COURSE_ID_MUST_BE_STRING": "ID y'amasomo igomba kuba umugozi",
+    "COURSE_THUMBNAIL_REQUIRED": "Ifoto y'amasomo irakenewe",
+    "COURSE_PRICE_REQUIRED": "Igiciro cy'amasomo kirakenewe",
+    "COURSE_PRICE_INVALID": "Igiciro cy'amasomo ntigikwiye",
+    "COURSE_PRICE_MUST_BE_NUMBER": "Igiciro cy'amasomo kigomba kuba umubare",
+    "COURSE_PRICE_MUST_BE_POSITIVE": "Igiciro cy'amasomo kigomba kuba umubare wuzuye",
+    "COURSE_CURRENT_PRICE_REQUIRED": "Igiciro cya none cy'amasomo kirakenewe",
+    "COURSE_CURRENT_PRICE_INVALID": "Igiciro cya none cy'amasomo ntigikwiye"
   }
 }
