--- a/src/i18n/kin/validation.json
+++ b/src/i18n/kin/validation.json
@@ -59,6 +59,10 @@
     "COURSE_PRICE_MUST_BE_NUMBER": "Igiciro cy'amasomo kigomba kuba umubare",
     "COURSE_PRICE_MUST_BE_POSITIVE": "Igiciro cy'amasomo kigomba kuba umubare wuzuye",
     "COURSE_CURRENT_PRICE_REQUIRED": "Igiciro cya none cy'amasomo kirakenewe",
-    "COURSE_CURRENT_PRICE_INVALID": "Igiciro cya none cy'amasomo ntigikwiye"
+    "COURSE_CURRENT_PRICE_INVALID": "Igiciro cya none cy'amasomo ntigikwiye",
+     "COURSE_IS_FREE_REQUIRED": "Course is free is required",
+     "COURSE_IS_FREE_INVALID": "Course is free is invalid",
+    "COURSE_IS_FEATURED_REQUIRED": "Course is featured is required",
+    "COURSE_IS_FEATURED_INVALID": "Course is featured is invalid"
   }
 }
